--- a/.github/workflows/build_atlases.yml
+++ b/.github/workflows/build_atlases.yml
@@ -15,7 +15,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          persist-credentials: true
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
+
 
       - name: Set up Python
         uses: actions/setup-python@v4
